# bax2bam

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bamboo_build.sh  bamboo_cram.sh  bamboo_unit.sh  makefile  meson.build  meson_options.txt
src/: Bax2Bam.cpp  CMakeLists.txt  CcsConverter.cpp  ConverterBase.h  HqRegionConverter.cpp  OptionParser.h  PolymeraseReadConverter.cpp  Settings.cpp  SubreadConverter.cpp  main.cpp
tests/: CMakeLists.txt  meson.build
tests/src/: TestData.h.in  TestUtils.cpp  TestUtils.h  test_ccs.cpp  test_common.cpp  test_hqregions.cpp  test_polymerase.cpp  test_subreads.cpp
